--- a/src/receiver-orientation/Makefile
+++ b/src/receiver-orientation/Makefile
@@ -1,6 +1,6 @@
 CC=gcc
 
-CFLAGS=-c -Wall -std=gnu99 -D_XOPEN_SOURCE=500 -D_GNU_SOURCE 
+CFLAGS=-c -Wall -std=gnu99 -D_XOPEN_SOURCE=500 -D_GNU_SOURCE -DDEBUG
 LDFLAGS=
 
 receiver-orientation: kalmanfilter.o receiver-orientation.o
